# shitcoin-factory

./: .gitignore  Cargo.toml  README.md
contracts/assetlist/: Cargo.toml
contracts/assetlist/examples/: schema.rs
contracts/assetlist/src/: contract.rs  error.rs  msg.rs  state.rs  tests.rs
contracts/factory/: Cargo.toml
contracts/factory/examples/: schema.rs
contracts/factory/src/: contract.rs  error.rs  msg.rs  state.rs  tests.rs
